--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+App/runs/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -50,7 +52,6 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
-App/runs/detect/
 # Translations
 *.mo
 *.pot
